apps/nas/jdownloader/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jdownloader
  namespace: default
  labels:
    app.kubernetes.io/name: jdownloader
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 5800
    targetPort: http
    protocol: TCP
  selector:
    app.kubernetes.io/name: jdownloader
