apps/nas/jdownloader/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jdownloader
  namespace: default
  annotations:
    external-dns.alpha.kubernetes.io/target: gw.${domain_absolutist_it:=absolutist.it}
spec:
  parentRefs:
  - name: envoy-gw-private
    namespace: envoy-gateway-system
  hostnames:
  - "jdownloader.${domain_absolutist_it:=absolutist.it}"
  - "jdownloader.${domain_wahoo_li:=wahoo.li}"
  rules:
  - backendRefs:
    - name: jdownloader
      port: 5800
